
// tags:
// `Added` for new features.
// `Changed` for changes in existing functionality.
// `Deprecated` for once-stable features removed in upcoming releases.
// `Removed` for deprecated features removed in this release.
// `Fixed` for any bug fixes.
// `Security` to invite users to upgrade in case of vulnerabilities.

[[v2.2.0]]
v2.2.0 (unreleased)
-------------------

Added
~~~~~

- New `input.media_keys` setting which can be used to disable Chromium's
  handling of media keys.

[[v2.1.1]]
v2.1.1 (unreleased)
-------------------

Changed
~~~~~~~

- Clicking the 'x' in the devtools window to hide it now also leaves insert
  mode.

Fixed
~~~~~

- The workaround for black on (almost) black formula images in dark mode now
  also works with Qt 5.12 and 5.13.
- When running in Flatpak, the QtWebEngine version is now detected properly.

[[v2.1.0]]
v2.1.0 (2021-03-12)
-------------------

Removed
~~~~~~~

- The following command aliases were deprecated in v2.0.0 and are now removed:
  * `run-macro` -> `macro-run`
  * `record-macro` -> `macro-record`
  * `buffer` -> `tab-select`
  * `open-editor` -> `edit-text`
  * `toggle-selection` -> `selection-toggle`
  * `drop-selection` -> `selection-drop`
  * `reverse-selection` -> `selection-reverse`
  * `follow-selected` -> `selection-follow`
  * `follow-hint` -> `hint-follow`
  * `enter-mode` -> `mode-enter`
  * `leave-mode` -> `mode-leave`

Added
~~~~~

- New `:screenshot` command which can be used to screenshot the visible part of
  the page.
- New optional dependency on the `importlib_metadata` project on Python 3.7 and
  below. This is only relevant when PyQtWebEngine is installed via pip - thus,
  this dependency usually isn't relevant for packagers.
- New `qute-keepassxc` userscript integrating with the KeePassXC browser API.

Changed
~~~~~~~

- Initial support for QtWebEngine 5.15.3 and PyQt 5.15.3/.4
- The `colors.webpage.prefers_color_scheme_dark` setting got renamed to