@@ -892,13 +892,6 @@ def test_ceil_log_invalid(number, base):
         utils.ceil_log(number, base)
 
 
-@pytest.mark.parametrize('skip', [True, False])
-def test_libgl_workaround(monkeypatch, skip):
-    if skip:
-        monkeypatch.setenv('QUTE_SKIP_LIBGL_WORKAROUND', '1')
-    utils.libgl_workaround()  # Just make sure it doesn't crash.
-
-
 @pytest.mark.parametrize('duration, out', [
     ("0", 0),
     ("0s", 0),
